@@ -1449,11 +1449,13 @@ public class GTItems {
 
         for (DyeColor color : DyeColor.values()) {
             if (color == DyeColor.WHITE) continue;
-            GLASS_LENSES.put(color.getName(), REGISTRATE.item(String.format("%s_glass_lens", color.getName()), Item::new)
-                    .lang("Glass Lens (%s)".formatted(toEnglishName(color.getName())))
+            GLASS_LENSES.put(color.getName(),
+                    REGISTRATE.item(String.format("%s_glass_lens", color.getName()), Item::new)
+                            .lang("Glass Lens (%s)".formatted(toEnglishName(color.getName())))
                             .tag(TagUtil.createModItemTag("lense"))
-                    .tag(TagUtil.createModItemTag("lenses/" + color.getName()))
-                    .register());
+                            .tag(TagUtil.createModItemTag("lenses/glass"))
+                            .tag(TagUtil.createModItemTag("lenses/" + color.getName()))
+                            .register());
         }
     }
 
